--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -9,7 +9,6 @@ As part of the course project for the class, project group 7 acquired bus riders
 ## 1.1 Background
 Bus operations are complex systems as they function at the intersection of transportation infrastructure and planning based on continually evolving user patterns.
 If we can predict the passenger loads, bus system can be run more efficiently and economically. Therefore, we investigated the ridership of the CUMTD bus system to attempt to find the optimal way to predict load averages (avg # of passengers onboard during a trip). 
-A lot of cities are currently implementing congestion pricing to ease traffic congestion or decrease pollution. But what is congestion pricing and why does it is it effective? 
 
 ## 1.2 Dataset Overview
 We received 3 datasets containing route performance and bus ridership data from CUMTD. For this project, we focused on the bus ridership per trip weekday data for the month of August. We will find the most appropriate variables for the accuracy of our prediction, and choose the optimal machine learning model for Kaggle competition.
@@ -82,12 +81,20 @@ Then, a pairwise scatter plot is used to show the degree of linearity of the rel
 
 As can be seen in figure 8, each day has a very similar distribution, however, Monday and Thursday have some outliers beyond the maximum. This gives some insight and confirms that the number of trips per day are fairly evenly distributed.
 
-**Figure 8. Box plot of duration per day full dataset.**
+Also，for CUMTD, different bus lines serve specific groups of people. In this way, it is important to find the characteristic of each bus line during August. First, we create different Dataframe for different bus line. Since the bus name is not easy to show in graphs, we use [Number of Routes' Names in CUMTD](http://mtd.org/maps-and-schedules/routes/) to instead. For some bus line which has different types of bus number based on different routes or different service timeline (for example, 1 Yellow serves during weekdays’ morning and afternoon, and 100 Yellow serves during weekdays’ evening and the whole weekends; 5 Green have normal line and express line or hopper line which similar but different routes), we separate all of them into different name and expression. After that, we compare the load avg in average for each bus line and plot them in figure 9.
 
-Figure 14 informs that the a $ trip < 12 minutes $ long have no stops. The number of stops then steadily increase with time to a max of 42 at a trip of duration ~ 55 to 65 minutes.
+![Load Avg for each line in average](images/load avg in all days (average).png){#fig:square-image}
 
+What's more, to compare the characteristic of each bus line on each day of August, we separate the load average in each into different serving days, which shows on figure 10. Moreover, to find its own difference of each bus routes, especially the difference between summer holidays and the opening week of the new semester, we combine the load average of each line in different days and plot them together, which shows on figure 11.
 
-**Figure 14. Bar plot of duration against P-stops filtered dataset.**
+![Load avg in each day](images/load avg in each day.png){#fig:tall-image height=10in}
+
+![Load avg of each bus line](images/load avg in each bus line.png){#fig:tall-image height=10in}
+
+With these comparisons, some takeaways can be summarized as follows:
+* There were only a few increasement after semester opened. It shows that the pandemic decreases the students' willingness of taking buses to face-to-face classes.
+* In August, the YELLOW, RED, LAVENDER, GREEN and GREY buses have relatively high passengers.
+* The Illini routes changed the most after semester started, we believe one of the reasons is that students who live in One North or One South must take buses to the classroom.
 
 ## EDA Results Summary
 
@@ -138,10 +145,6 @@ Data preprocessing is an indispensable step in machine learning. It is important
 
 Data in the real world always have few missing values. This phenomena may be due to many reasons. There are many methods to handing missing values such as ignore the data row with missing value, replacing the missing value with mean or median value. **Table x** shows the top 8 percentage of missing value for each feature. 1.0 means all the values are missing. 0.0 means none of the data is missing. Here, the missing value of ‘Trip’ are filled with the mean of all the existing 'Trip' values. From the table we can know the eighth large of the percentage is already 0, which proves that there is no missing data for other features not appearing in the table.
 
-**Table x** Percentage of Missing Value
-
-![](images/missingvalue.png)
-
 
 ### Feature Scaling
 
@@ -170,8 +173,6 @@ Models learn best and fasted when the data is scaled, most commonly between valu
 
 In the standardization, the core idea is to convert each feature in the data so that the mean value of each feature is 0 and the standard deviation is 1. The general method of calculation is to determine the distribution mean and standard deviation for each feature. The formula showing how to transform the values is shown as follow.
 
-![](images/z-score.png)
-
 **Figure x. Z-score Normalization**
 
 ### Converting Categorical Features to Numerical
@@ -181,8 +182,6 @@ To allow the model to learn from the categorical features, they need to be conve
 ### One-hot coding
 
 Since most machine learning algorithms require numerical input and output variables. We have three categorical data now. We can use the one hot encoding to convert categorical data to integer data. **Figure x** is an example of how a dataframe looks like after one hot encoding. In python, we can use panda’s ‘pd.get_dummies’ function to achieve this. however, we find that the accuracy of model will be less after adding the these three features into our training data. Then we decided to drop all of them.
-
-![](images/onehot.png)
 
 **Figure x. One-hot Coding Example**
 
@@ -240,49 +239,13 @@ After the optimization as stochastic gradient descent (SGD), take learning rate 
 
 ### Most Predictive Model
 
-**My model was best with relu layers and dropout regularization only. Would probably be even better if it had automatic hyperparameter and parameter selection!(kundayi)**
+** My model was best with relu layers and dropout regularization only. Would probably be even better if it had automatic hyperparameter and parameter selection!**
 
-Our best mode is a type of neural network model developed by Yujing using the sklearn package. The name of model is **Gradient Boosting Regressor**.
+# Chapter 4. Conclusions
 
-*	The basic idea of Boosting is to combine several weak learners into a stronger one.
-
-*	Boosting models try predictors sequentially, and the subsequent model attempts to fix the errors of its predecessor.
-
-*	Gradient boosting is a type of boosting algorithm. It relies on the intuition that the best possible next model, when combined with previous models, minimizes the overall prediction error. 
-
-![](images/Gradient Boosting Algorithm.png)
-
-**Figure x. Gradient Boosting Algorithm**
-
-The Hyperparameters used in the model are shown as follow. The reason why each parameter has more than one number is that we also use the **grid search** method.
-*	max_depth: [3, 10]
-*	learning_rate: [0.1, 0.03]
-* n_estimators: [100, 250, 500]
-
-Sometimes we can improve models' performance by tuning the hyperparameters. Using grid search an operation technique called can help us finding the optimal combination of hyperparameter values. Grid search is a brute-force exhaustive search paradigm.
-
-After combing the GradientBoostingRegressor and GridsearchCV, the **root mean squared error** is **0.165**, and the **R2 score** is 0.985
-
-The following figure shows the predictions against targets. The straight line represents the function y=x. 
-
-* If a point falls on this line, then for this input we can know prediction = target.
-
-* If a point falls over this line, then for this input we can know prediction > target.
-
-* If a point falls below this line, then for this input we can know prediction < target.
-
-* The farther the point is from the line, the less accurate the prediction.
-
-![](images/T_P.png)
-
-**Figure x. Predictions VS Targets**
-
-
-
-# Chapter 5. Conclusions
-
-As was shown in chapter 4 the most predictive model was able to predict the load average with 0.98 accuracy. Some factors need to be taken into consdieration about this process:
+As was shown in chapter 3 the most predictive model was able to predict the load average with ## accuracy. Some factors need to be taken into consdieration about this process:
 
 1. A significant amount of pre-processing was used - To make this model more cost- and time-effective the input data needs to be tidy before going into the data. This can be achieved by changing the way the data is stored or creating classes and functions that automatically clean the data.
 2. Reliablity - This model was developed using data from a single month from 2020 (August). Therefore, although the model had high predictive potential with the August data. It is possible that the model is not able to accurately predict load averages for other months were passenger habits may significantly differ (e.g., middle of summer, winter or spring). Thererfore, to truly optimize the model a larger year round data set is recommended. It would probably be best to train the model using at least 1 month of data from the 4 seasons of a year.
+3. 
 
