--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -110,7 +110,7 @@ The following section summarizes the EDA results that are relevant to the model 
 * “Line” is the name of the bus line, which is what most riders are familiar with. There are 38 unique bus lines and 11 of them that do more than 10 trips per workday.
 
 * The data has 6 categorical features – with the exception of pattern, the other 6 features will be used in the model development effort.
-* 24 numerical features – the following features wil be used in the model: P-stops, total in and total out (flux?), and PM.
+* 24 numerical features – the following features wil be used in the model: P-stops, total in and total out, and PM.
 * The label is the load avg.
 
 The following features were identified to have strong predictive ability, indicated by a high correlation with the label (correlation in parenthesis):
